# DGX-Spark-Dictation

./: .gitignore  README.md  pyproject.toml  sparktate-daemon.sh
sparktate/: __init__.py  audio.py  cli.py  daemon.py  display.py  transcriber.py
